# gopi

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.mysql  README.md  config.example.toml  docker-compose.yml  go.mod  go.sum  my.cnf
.github/workflows/: deploy.yml
cmd/: main.go
cmd/gopi/: main.go
config/: config.go
docs/: README.md  api-examples.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  rainbow.css  vars.css
internal/config/: config.go
internal/lib/handlers/prettyloger/: prettyloger.go
internal/lib/middleware/logger/: logger.go
internal/lib/random/: random.go
internal/lib/response/: response.go
internal/server/: server.go
internal/server/handlers/delete/: delete.go
internal/server/handlers/get/: get_gif.go
internal/server/handlers/get/gif/: gif.go
internal/server/handlers/get/gifs/: gifs.go
internal/server/handlers/get_gif/: get_gif.go
internal/server/handlers/save/: save.go
internal/server/middleware/auth/: auth.go
internal/storage/: errors.go  mysql.go
internal/storage/sqlite/: sqlite.go
scripts/: init.sql
site/: Cargo.toml
site/src/: main.rs
