[package]
name = "gopi_site"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
warp = "0.3.7"
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
